# cog_soc_env_space

./: CMakeLists.txt  README.md  build  build_app_and_test.sh  cog_soc_env_space_cat.md  rebuild.sh
.github/workflows/: build.yml  update-homebrew-tap.yml
config/: README.md  environment.example.json  niche.example.000.json  simulation.example.json
include/: Autotroph.h  Builders.h  Cohort.h  Constants.h  ConsumerLivingBeing.h  Decomposer.h  DietFoodTypeMatch.h  Environment.h  EnvironmentConfig.h  Heterotroph.h  IFrameSource.h  JsonEcosystem.h  JsonEnumNames.h  JsonFrameSource.h  LivingBeing.h  Niche.h  SensitivityLevel.h  SimulationConfig.h  SimulationSnapshotReader.h  Utilities.h
output/: simulation.json  test_snapshot.json
scripts/linux/: run_sim.sh  run_viewer.sh
src/: Autotroph.cpp  Builders.cpp  Cohort.cpp  ConsumerLivingBeing.cpp  Decomposer.cpp  Environment.cpp  EnvironmentConfig.cpp  Heterotroph.cpp  JsonEcosystem.cpp  JsonEnumNames.cpp  JsonFrameSource.cpp  LivingBeing.cpp  Niche.cpp  SimulationConfig.cpp  SimulationSnapshotReader.cpp  Utilities.cpp  main.cpp  test_app.cpp  viewer_main.cpp
